Better base template selection and added the admin domain.

--- a/voyager/templates/base.html
+++ b/voyager/templates/base.html
@@ -1,77 +1,1 @@
-{% load hosts %}<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB">
-  <head>
-    <title>{% block title %}Data from the CLAROS Project{% endblock %} | data.clarosnet.org | CLAROS Data</title>
-    
-    {% with "http://explore.clarosnet.org/XDB/ASP/clarosHome/styles/" as EXPLORER_STYLE %}
-    <link rel="stylesheet" type="text/css" href="{{ EXPLORER_STYLE }}basic.css" media="all"/>
-    <link rel="stylesheet" type="text/css" href="{{ EXPLORER_STYLE }}print.css" media="print"/>
-    <link rel="stylesheet" type="text/css" href="{{ EXPLORER_STYLE }}full.css" media="screen and (min-device-width: 320px)"/>
-    {% endwith %}
-
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}base.css"/>
-    <link rel="icon" type="image/x-icon" href="{{ STATIC_URL }}favicon.ico">
-
-    <!--<link rel="stylesheet" href="{{ STATIC_URL }}main.css" type="text/css"/>-->
-    {% if no_index %}<meta name="robots" content="noindex"/>{% endif %}
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-
-    <script type="application/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-    <script type="application/javascript" src="http://data.clarosnet.org/openlayers-media/OpenLayers.js"></script>
-    <script type="application/javascript" src="{{ STATIC_URL }}base.js"></script>
-    {% block extra_head %}{% endblock %}
-  </head>
-
-{% block body %}
-  <body class="index">
-    <div id="all">
-      <div id="header">
-        <a id="logoLink" href="http://www.clarosnet.org/">
-          <span id="site-title">www.clarosnet.org: The world of art on the semantic web</span>
-        </a>
-      <div class="mainnav">
-        <ul>
-{% block nav %}
-          <li><a href="{% host_url index on data %}">Home</a></li>
-          <li><a href="{% host_url claros-objects on data %}">Objects</a></li>
-          <li><a href="{% host_url claros-people on data %}">People</a></li>
-          <li><a href="{% host_url places:index on data %}">Places</a></li> 
-          <li><a href="{% host_url sparql:endpoint on data %}">SPARQL</a></li>
-{% endblock %}
-        </ul>
-      </div>
-      </div>
-
-      <div id="content">
-{% block content %}
-        <h1>Home</h1>
-{% endblock %}
-
-
-      </div>
-
-{% if queries %}
-      <div id="query">
-        <div class="text-content" style="padding-top:0">
-          <h2>Quer{{ queries|pluralize:"y,ies" }} used to generate this page</h2>
-          {% for query in queries %}
-            <pre>{{ query }}</pre>
-          {% endfor %}
-        </div>
-      </div>
-{% endif %}
-
-    </div>
-    <div id="footer">
-      <p>
-        Hosted by the University of Oxford's e-research centre, <a href="http://www.oerc.ox.ac.uk/">OeRC</a><br/>
-        This interface was built using <a href="http://openjena.org/wiki/Fuseki">Fuseki</a>,
-        <a href="https://github.com/oucs/humfrey">humfrey</a>, and
-        <a href="https://github.com/clarosnet/claros-voyager">a tweaked frontend</a>, all
-        <a href="http://www.opensource.org/">open-source software</a>.
-      </p>
-    </div>
-  </body>
-{% endblock %}
-</html>
+{% extends base_template_name %}
