--- a/voyager/templates/index.html
+++ b/voyager/templates/index.html
@@ -6,27 +6,13 @@
 <link rel="alternate" type="application/rss+xml" title="{{ feed.feed.title }}" href="{{ feed.href }}" />
 {% endif %}{% endblock %}
 
+{% block with_right_sidebar %} with-right-sidebar{% endblock %}
+
 {% block content %}
     <h1>CLAROS Data</h1>
 
     <div class="text-content">
-    {% if feed %}
-    <div class="blog-feed">
-      <h2><a href="{{ feed.feed.link }}">The CLAROS data blog</a></h2>
 
-      {% for entry in feed.entries|slice:":5" %}
-        <div class="blog-entry">
-          <h3><a href="{{ entry.link }}">{{ entry.title }}</a></h3>
-
-          <p class="blog-entry-date">{{ entry.updated_datetime }}</p>
-
-          {{ entry.content.0.value|truncatewords_html:20|safe }}
-
-          <p class="blog-entry-more"><a href="{{ entry.link }}">Continue reading &#10145;</a></p>
-        </div>
-      {% endfor %}
-    </div>
-    {% endif %}
 
 
     <p>The CLAROS Data service provides a RESTful interface for the data of the
@@ -49,4 +35,24 @@
   </div>
 
   <div style="clear:both;"> </div>
+{% endblock %}
+
+{% block right_sidebar %}
+    {% if feed %}
+    <aside class="right-sidebar">
+      <h2><a href="{{ feed.feed.link }}">The CLAROS data blog</a></h2>
+
+      {% for entry in feed.entries|slice:":5" %}
+        <div class="blog-entry">
+          <h3><a href="{{ entry.link }}">{{ entry.title }}</a></h3>
+
+          <p class="blog-entry-date">{{ entry.updated_datetime }}</p>
+
+          {{ entry.content.0.value|truncatewords_html:20|safe }}
+
+          <p class="blog-entry-more"><a href="{{ entry.link }}">Continue reading &#10145;</a></p>
+        </div>
+      {% endfor %}
+    </aside>
+    {% endif %}
 {% endblock %}
