--- a/voyager/templates/admin/base_site.html
+++ b/voyager/templates/admin/base_site.html
@@ -25,7 +25,7 @@
 <ul class="mainnav">
   <li><a href="{% url index %}">home</a></li>
   <li><a href="{% url update:index %}">dataset updates</a></li>
-  <li><a href="{% url sparql-stores:index %}">stores</a></li>{% if user.is_staff %}
+  <li><a href="{% url sparql-admin:index %}">stores</a></li>{% if user.is_staff %}
   <li><a href="{% url admin:index %}">admin</a></li>{% endif %}
 </ul>
 {% endif %}{% endblock %}
