jQuery URL now scheme-relative.

--- a/voyager/templates/hosts/data.html
+++ b/voyager/templates/hosts/data.html
@@ -55,7 +55,7 @@
 
     {% if no_index %}<meta name="robots" content="noindex"/>{% endif %}
 
-    <script type="application/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+    <script type="application/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
     <script type="application/javascript" src="http://data.clarosnet.org/openlayers-media/OpenLayers.js"></script>
     <script type="application/javascript" src="{{ STATIC_URL }}base.js"></script>
     {% block extra_head %}{% endblock %}
