--- a/voyager/templates/hosts/data.html
+++ b/voyager/templates/hosts/data.html
@@ -56,7 +56,7 @@
     {% if no_index %}<meta name="robots" content="noindex"/>{% endif %}
 
     <script type="application/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-    <script type="application/javascript" src="http://data.clarosnet.org/openlayers-media/OpenLayers.js"></script>
+    <script type="application/javascript" src="//maps.googleapis.com/maps/api/js?key=AIzaSyAKS_ypbhb955TVjJ0sR5YDhfe261ghUCw&sensor=false"></script>
     <script type="application/javascript" src="{{ STATIC_URL }}base.js"></script>
     {% block extra_head %}{% endblock %}
   </head>
