--- a/voyager/templates/hosts/data.html
+++ b/voyager/templates/hosts/data.html
@@ -94,7 +94,16 @@
 
         {% block right_sidebar %}{% endblock %}
         {% block left_sidebar %}{% endblock %}
+
       <div style="clear:both"></div>
+      {% if queries %}
+      <div id="queries">
+        <h2>Quer{{ queries|pluralize:"y,ies" }} used to generate this page</h2>
+        <ul>{% for query in queries %}
+          <li><pre>{{ query }}</pre></li>{% endfor %}
+        </ul>
+      </div>
+{% endif %}
       </div>
     
       <!-- close .main -->
@@ -116,14 +125,5 @@
 </html>
 
 {% comment %}
-{% if queries %}
-      <div id="query">
-        <div class="text-content" style="padding-top:0">
-          <h2>Quer{{ queries|pluralize:"y,ies" }} used to generate this page</h2>
-          {% for query in queries %}
-            <pre>{{ query }}</pre>
-          {% endfor %}
-        </div>
-      </div>
-{% endif %}
+
 {% endcomment %}
