--- a/voyager/static/site/css/small.css
+++ b/voyager/static/site/css/small.css
@@ -90,8 +90,7 @@ div.wrapper {
 
 div.main aside.left-sidebar, div.main aside.right-sidebar {
     width: 210px;
-    padding: 0 5px 5px 5px;
-    margin-top: 72px;
+    padding: 0.5em 5px 5px 5px;
     font-size: 0.8em;
 }
 
@@ -131,6 +130,10 @@ h1 {
 	font-size:2em;
 	font-weight: normal;
 	margin-bottom: 1em;
+}
+
+#preamble h1 {
+    margin-top: 0.5em;
 }
 
 .with-left-sidebar h1 {
