--- a/voyager/templates/index.html
+++ b/voyager/templates/index.html
@@ -2,12 +2,6 @@
 
 {% block title %}Home{% endblock %}
 
-{% block extra_head %}{% if feed %}
-<link rel="alternate" type="application/rss+xml" title="{{ feed.feed.title }}" href="{{ feed.href }}" />
-{% endif %}{% endblock %}
-
-{% block with_right_sidebar %} with-right-sidebar{% endblock %}
-
 {% block content %}
     <h1>CLAROS Data</h1>
 
@@ -28,31 +22,11 @@
        Model</a> using the <code>http://purl.org/NET/crm-owl#</code>
        namespace.</p>
 
-    <p>You can use the <a href="{% url claros-objects %}">Objects</a> and
-       <a href="{% url claros-people %}">People</a> views to start exploring,
-       or try your hand at <a href="{% url sparql:endpoint %}">a SPARQL query</a>.</p>
+    <p>You can use the <a href="{% url "claros-objects" %}">Objects</a> and
+       <a href="{% url "claros-people" %}">People</a> views to start exploring,
+       or try your hand at <a href="{% url "sparql:endpoint" %}">a SPARQL query</a>.</p>
 
   </div>
 
   <div style="clear:both;"> </div>
-{% endblock %}
-
-{% block right_sidebar %}
-    {% if feed %}
-    <aside class="right-sidebar">
-      <h2><a href="{{ feed.feed.link }}">The CLAROS data blog</a></h2>
-
-      {% for entry in feed.entries|slice:":5" %}
-        <div class="blog-entry">
-          <h3><a href="{{ entry.link }}">{{ entry.title }}</a></h3>
-
-          <p class="blog-entry-date">{{ entry.updated_datetime }}</p>
-
-          {{ entry.content.0.value|truncatewords_html:20|safe }}
-
-          <p class="blog-entry-more"><a href="{{ entry.link }}">Continue reading &#10145;</a></p>
-        </div>
-      {% endfor %}
-    </aside>
-    {% endif %}
 {% endblock %}
