--- a/voyager/templates/doc/base.html
+++ b/voyager/templates/doc/base.html
@@ -71,7 +71,7 @@
     <script type="application/javascript">
       $(function() { voyager_simple_map("subject-map", {{ subject.geo_long }}, {{ subject.geo_lat }}); });
     </script>
-    <a href="{% url nearby %}?lat={{ subject.geo_lat }}&amp;lon={{ subject.geo_long }}&amp;distance=100">Nearby</a>
+    <a href="{% url "nearby" %}?lat={{ subject.geo_lat }}&amp;lon={{ subject.geo_long }}&amp;distance=100">Nearby</a>
 {% endif %}
 
       {% for thing in subject.things_of_type %}
@@ -101,13 +101,13 @@
 <p>
               Other things of type:
               {% for type in subject.all.rdf_type %}  
-                <a href="{% url sparql:endpoint %}?query={{ "SELECT ?subject WHERE {  ?subject a <"|urlencode }}{{ type.uri|urlencode }}{{ "> } LIMIT 200"|urlencode }}">
+                <a href="{% url "sparql:endpoint" %}?query={{ "SELECT ?subject WHERE {  ?subject a <"|urlencode }}{{ type.uri|urlencode }}{{ "> } LIMIT 200"|urlencode }}">
                   {{ type.label }}</a>{% if not forloop.last %}, {% endif %}
               {% endfor %}
             </p>
           {% endif %}
 
-          <p>            <a href="{% url sparql:endpoint %}?query={{ "SELECT ?subject ?predicate WHERE {  ?subject ?predicate <"|urlencode }}{{ subject.uri|urlencode }}{{ "> } LIMIT 200"|urlencode }}">
+          <p>            <a href="{% url "sparql:endpoint" %}?query={{ "SELECT ?subject ?predicate WHERE {  ?subject ?predicate <"|urlencode }}{{ subject.uri|urlencode }}{{ "> } LIMIT 200"|urlencode }}">
               What links here
             </a></p>
 
